# agent_service

./: .env.example  .gitignore  README.md  REFACTOR_SUMMARY.md  UPDATE_NOTES.md  WEATHER_GUIDE.md  demo_weather.py  geocoding.py  geocoding_examples.py  improvements.txt  instruction.md  main.py  pyproject.toml  test_all.py  test_new_format.py  test_textd_integration.py  test_weather.py  textD.py  weather.py  weather_examples.py
docs/archive/: ARCHIVE_INFO.md
